--- a/LECTURE2.Rmd
+++ b/LECTURE2.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'Intro to population ecology'
 author: 'NRES 470/670'
-date: 'Spring 2023'
+date: 'Spring 2024'
 output: 
   html_document: 
     theme: spacelab
@@ -20,29 +20,29 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 ### Ecological
   - Why are some species more abundant than others?   
   - What causes population densities to vary in space and time?   
-  - What causes populations to become extirpated? Recolonized?  
+  - What causes populations to go extinct? Get recolonized?  
   - What processes *regulate* population growth?   
     - Extrinsic vs intrinsic factors (Nicholson vs Andrewartha debate)
-  - What prevents predator-prey relationships from collapsing?   
-  - What factors allow competitors to coexist?
-  - What factors allow metapopulations to be stable and self-sustaining?
+  - How can predators and prey coexist sustainably?   
+  - What factors allow strong competitors to coexist?
+  - What levels of connectivity are needed to maintain sustainable metapopulations?
   
 ![](White-tailed_deer.jpg){width=50%}
 
 ### Conservation and Management
-  - What is the conservation status of a focal species or population?
-  - How do anthropogenic structures and land uses affect populations?
-  - What is the *Maximum Sustainable Yield* for a focal game species?
-  - How can pest species be effectively controlled?
-  - What specific land areas should be protected to preserve at-risk populations and metapopulations?
-  - What are the likely population-level effects of alternative conservation or management strategies? 
+  - Is a focal species or population at risk of extinction?
+  - How do modern human land use practices affect populations?
+  - What is the *Maximum Sustainable Yield* for an important game species?
+  - How can insect pests be effectively controlled?
+  - What land should be protected to preserve at-risk populations?
+  - How can we reduce extinction risk for a focal population while minimizing costs? 
 
 ## What is a population?
 
 From Krebs (1972):
 “A population is defined as a group of organisms of the same species occupying a particular space at a particular time, with the potential to breed with each other'
 
-Spatial boundaries defining populations sometimes are easily defined, but more typically are vague and difficult to determine.
+Spatial boundaries defining populations sometimes are easily defined, but can also be vague and difficult to determine.
 
 Population size, or abundance, is often represented as $N$, and is the most basic measurement of a wild population. 
 
@@ -53,7 +53,7 @@ Population size, or abundance, is often represented as $N$, and is the most basi
 Giant puffballs produce 7 trillion offspring (12 zeroes!) in one reproductive event
 ... If all of those individuals reached adulthood, the descendants from just two parent puffballs would weigh more than the entire planet in two generations!
 
-The reason? Populations can exhibit **exponential growth**, in which each new addition to the population expands the reproductive potential of the population in a **positive feedback loop**.    
+The reason? Populations can exhibit **exponential, or multiplicative, growth**, in which each each addition to the population expands the rate of population growth (more individuals mean more reproductive output), leading to a **positive feedback loop**.    
 
 ## Mathematics and Population Ecology
 
@@ -65,7 +65,7 @@ The reason? Populations can exhibit **exponential growth**, in which each new ad
   
 ![](1976_Elton.jpg){width=30%}
 
-The importance of the method is this: if we know certain variables, mostly desired by ecologists and in some cases already determined by them, we can predict certain results which would not normally be predictable or even expected by ecologists. The stage of verification of these mathematical predictions has hardly begun; but their importance cannot be under-estimated, and we look forward to seeing the further volumes of Lotka’s studies.       
+'The importance of the method is this: if we know certain variables, we can predict certain results which would not normally be predictable or even expected by ecologists. The stage of verification of these mathematical predictions has hardly begun; but their importance cannot be under-estimated.'        
   - Charles Elton    
   
 ## Exponential growth
@@ -80,7 +80,7 @@ Feedbacks are what leads to complex ('interesting') system behaviors and unexpec
 
 A reinforcing, or **positive feedback** (often called a 'vicious circle') leads to _exponential growth_, leading to insanely high numbers given enough time!
 
-A **negative feedback** is stabilizing, leading to nice, orderly, regulated systems (and homeostasis in organismal biology!). We'll talk more about negative feedbacks in populations soon enough (population regulation). 
+A **negative feedback** is stabilizing, leading to regulated systems (and homeostasis in organismal biology!). We'll talk more about negative feedbacks in populations soon enough (population regulation). 
 
 In the previous in-class exercise the model structure produced linear growth as the [Flow] added a fixed amount to the [Stock] in each time step.
 
@@ -90,31 +90,28 @@ In the previous in-class exercise the model structure produced linear growth as 
 
 Let's build a model to help us better understand this process. 
 
-This model adds a **feedback** using a [Link] from the [Stock] back into the [Flow]. The [Link] communicates the value of the [Stock] to the [Flow]. A [Link] only communicates information from one element of the model to another, it doesn't actually change the value of the [Stock] (that is what a [Flow] does).
+This model includes a **feedback** in which the [Flow] rate depends on the amount currently in the [Stock]. 
 
 1. Open InsightMaker. Create a [Stock] and a [Flow] as you did in the previous model (flow should be an input, not an output) and just name them *Stock* and *Flow* for now.  
-
 2. If you mouse over *Stock* or *Flow* a small [$=$ Sign] will appear. If you click this it will open the **Equation** window where you can set values or equations. Open this window for the [Stock], enter a value of 1, then close the window.
 
-3. The value of the [Stock] can be communicated to the [Flow] with a [Link] (representing a feedback process!). To create a [Link], click **Link** in the **Connections** part of the toolbar (at the top). When you mouse over the [Stock] click on the blue arrow, drag the [Link] to the [Flow] and release. You now have a [Link] on top of the [Flow]. Now hold the Shift Key and click in the middle of the [Link] and a little green node will be created on the [Link]. You can select this node and drag it up so the [Link] isn't directly on top of the [Flow] (now you can see the [Link]). 
+3. Usually there is some type of factor governing the **rate** the [Stock] influences the [Flow]. Let's introduce a [Variable] named *Rate*. To create a [Variable], right-click on the canvas and select **Variable** from the drop-down. Now draw a [Link] from *Rate* to the [Flow] (this allows you to use the *Rate* parameter in the equation for the [Flow]. Open the **Equation** window for *Rate* and set it to 0.5. 
 
-4. Usually there is some type of factor governing the **rate** the [Stock] influences the [Flow]. Let's introduce a [Variable] named *Rate*. To create a [Variable], right-click on the canvas and select **Variable** from the drop-down. Now draw a [Link] from *Rate* to the [Flow]. Open the **Equation** window for *Rate* and set it to 0.5. 
+4. Open the **Equation** window for the [Flow] and set it to [Stock] times [Rate]. That is, the total inflow into the [Stock] is equal to the value of the [Stock] multiplied by the value of *Rate*.
 
-5. Open the **Equation** window for the [Flow] and set it to [Stock] times [Rate]. That is, the total inflow into the [Stock] is equal to the value of the [Stock] multiplied by the value of *Rate*.
+5. Now click [Run Simulation] and you have just finished your first exponential growth simulation model! Does it do what you would expect?
 
-6. Now click [Run Simulation] and you have just finished your first reinforcing loop simulation model! Does it do what you would expect?
+**Q:** If [Stock] is a population -- say, rabbits -- then what is the interpretation of [Flow]? What is the interpretation of *Rate*? Clone your model, and then *Rename your variables accordingly* and change the parameters to make the model more biologically realistic for the biological processes they represent. Run the simulation again. 
 
-**Q:** If [Stock] is a population -- say, rabbits -- then what is the interpretation of [Flow]? What is the interpretation of *Rate*? *Rename your variables accordingly* and change the parameters to make the model more biologically realistic. Run the simulation again. 
-
-**Q** Recall the basic equation of exponential growth: $\Delta N = r \cdot N_t$. How does it relate to the InsightMaker model you have just created? Which component of the equation refers to which component of the model in InsightMaker? [PointSolutions]
+**Q** Recall the basic equation of exponential growth: $\Delta N = r \cdot N_t$. How does it relate to the InsightMaker model you have just created? Which component of the equation refers to which component of the model in InsightMaker? [Top Hat]
 
 7. Think about the first question above while doing this (snowball, people, rabbits, fire, bacteria, fleas, savings accounts, cancer). How would you change the values to represent each of these quantities? Pick a couple of these and try it out!
 
 You should notice that the population tends to grow slowly at first and then very rapidly. This is referred to as *exponential growth*. If you've read the first chapter of the Gotelli book, you will recognize this as the _foundational concept of population ecology_!
 
-**Q** Can you model the puffball example from earlier in the lecture? How many giant puffballs are in the population after two generations?? [PointSolutions]
+**Q** Can you model the puffball example from earlier in the lecture? How many giant puffballs are in the population after two generations?? [Top Hat]
 
-**Q** Can you (approximately) replicate the human population graph at the beginning of this lecture? What is the per-capita growth rate ($r$) of the human population?? [PointSolutions]  (NOTE: this is totally optional, but you could solve this analytically!)
+**Q** Can you (approximately) replicate the human population graph at the beginning of this lecture? What is the per-capita growth rate ($r$) of the human population?? [Top Hat]  (NOTE: this is totally optional, but you could solve this analytically!)
 
 And just for fun, here is a [video](https://www.youtube.com/watch?v=9znsuCphHUU&list=PLE431532ABEAD0082) about exponential growth you might want to check out..
 
