update office hours

--- a/index.Rmd
+++ b/index.Rmd
@@ -17,11 +17,11 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 **Office:** Fleischmann Agriculture, room 220e  
 **Phone:** 775-682-7449     
 **Email**: kevinshoemaker_at_unr_dot_edu        
-**Office hours**: Mondays from 3 to 4pm in FA 220e         
+**Office hours**: Wednesdays from 11am to noon in FA 220e         
 **Course Website**: [https://kevintshoemaker.github.io/NRES-470/](https://kevintshoemaker.github.io/NRES-470/) 	    
  
 **Teaching Assistant** Colton Irons (cirons_at_nevada_dot_unr_dot_edu)        
-**TA Office hours**: Fridays at 11am in FA 301 (tentative!)       
+**TA Office hours**: Mondays at 4pm in FA 235       
 
 ### Course Meeting Times
 
