--- a/LECTURE3.Rmd
+++ b/LECTURE3.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Malthus and the beginning of Pop Ecol"
 author: "NRES 470/670"
-date: "Spring 2023"
+date: "Spring 2024"
 output: 
   html_document: 
     theme: spacelab
@@ -29,22 +29,22 @@ Finally, his argument can be summed up as follows:
 
 1. There are always hard limits to (human) population growth, and these limits have to do with food availability,
 2. When there is more food available, humans will tend to apply that toward increased reproduction, 
-3. Which will only temporarily forestall a crisis when we inevitably reach the limits to growth, leading to.:
+3. Which will only temporarily forestall a crisis when we inevitably reach the limits to growth, leading to:
 4. Widespread famine, disease etc. - especially among poor and disadvantaged populations.
 
 > "If they would rather die they had better do it, and decrease the surplus population" - Ebenezer Scrooge
 
-**Discussion Question:** Was Malthus right? For humans? For wildlife? Can you think of any examples for or against? 
+**Discussion Question:** Was Malthus right? For humans? For wildlife? Can you think of any examples for or against? [Top Hat]
 
 
 ![](darwin1.jpg){width=30%}
 
 
-Interestingly, in 1838 (four years after Malthus’ death), Charles Darwin, just back from his trip on HMS Beagle (1831–1836), was searching for possible mechanisms to explain the origin of species. On reading Malthus’ *Essay on the principle of population*, he realized one of the possible implications of the checks that controlled population growth (i.e., that the power of exponential growth, confronted with hard resource limitations, implies a 'population surplus' destined to die early) and wrote: 
+Interestingly, in 1838 (four years after Malthus’ death), Charles Darwin, just back from his trip on HMS Beagle (1831–1836), was searching for possible mechanisms to explain the origin of species. On reading Malthus’ *Essay on the principle of population*, he realized one of the possible implications of the checks that controlled population growth (i.e., that the power of exponential growth, confronted with hard resource limitations, implies a 'population surplus' destined to die before they are able to reproduce) and wrote: 
 
 > '...favourable variations would tend to be preserved, and unfavourable ones to be destroyed ... The result of this would be the formation of a new species. Here, then, I had at last got a theory by which to work.' - Charles Darwin 
 
-Twenty one years later Darwin published his book *On the origin of species by means of natural selection*. Like Malthus' work, it too raised a storm of controversy and protest.
+Twenty one years later, Darwin published his book *On the origin of species by means of natural selection*. Like Malthus' work, it too raised a storm of controversy and protest.
 
 So, what do you think? Mathus' *Essay* was extremely influential, right!!
 
@@ -56,9 +56,9 @@ Here is the scenario we will model: if the population exceeds a certain limit, t
 
 How can we do this in InsightMaker? You already know how to make an exponentially growing population! The new feature we will learn today is a very important programming construct: the **conditional statement**.
 
-Conditional statements are also known as IF-THEN statements. In plain English: *IF some condition is true, THEN do something. ELSE if some other condition is true, THEN do something else. ELSE if none of the previous conditions are true, THEN do something else.*
+Conditional statements are also known as IF-THEN-ELSE statements. In plain English: *IF [some condition is true], THEN [do one thing] ELSE [do another thing].*
 
-In today's in-class exercise, we will implement the following conditional statement (the "famine condition"): *IF human population is below the population limit, THEN the annual death rate is 0.01. ELSE if the population exceeds the population limit, a famine arises and the mortality rate jumps to 0.99*
+In today's in-class exercise, we will implement the following conditional statement (the "famine condition"): *IF human population is below the population limit, THEN the annual death rate is 0.01. ELSE a famine arises and the mortality rate jumps to 0.99*
 
 To implement this in InsightMaker, we need to use the following **syntax**:
 
@@ -70,13 +70,13 @@ Else
 End If
 ```
 
-1. Put together a basic exponential-growth model for a new [Stock] named *Humans* (or just clone and modify a basic exponential growth model with birth and death rate). This [Stock] should have two [Flows], one [Flow In] named *Births* and one [Flow Out] named *Deaths*. Both *Births* and *Deaths* should be defined as the product of *Humans* and per-capita rate constants, respectively called *Birth rate* and *Death rate* (each defined on the canvas as [Variables]). This model is identical to one of the models you will (or have already made) in lab 1. 
+1. Put together a basic exponential-growth model for a new [Stock] named *Humans* (or just clone and modify a basic exponential growth model with birth and death rate). This [Stock] should have two [Flows], one [Flow In] named *Births* and one [Flow Out] named *Deaths*. Both *Births* and *Deaths* should be defined as the product of *Humans* and per-capita rate constants, respectively called *Birth rate* and *Death rate* (each defined on the canvas as [Variables]). This model is identical to one of the models you will make (or have already made) in lab 1. 
 
-2. Initialize the population of *Humans* to 1000. Set the *Birth rate* to 0.1 (humans produced per human per year). Set the *Death rate* to 0.01 (humans lost per human per year). Change the settings so that the simulation runs for 100 years.  
+2. Initialize the population of *Humans* to 1000. Set the *Birth rate* to 0.1 (humans produced per human per year). Set the *Death rate* to 0.01 (humans lost per human per year). Change the settings so that the simulation runs for 100 years. (by the way, what is the intrinsic rate of growth, $r$, for this population?)
 
 3. Run this model, make sure it behaves like you would expect it to (yielding exponential growth!). How many humans are there after 100 years?
 
-4. Now make a new [Stock] called *Limit*, representing the population limit for *Humans*. This could, for instance, represent the *maximum number of humans that could be supported indefinitely if all arable land were cultivated with the most energy-rich crop possible*. Initialize the "Limit" to half a million. 
+4. Now make a new [Stock] called *Limit*, representing the population limit for *Humans*. This could, for instance, represent the *maximum number of humans that could be supported indefinitely if all arable land were cultivated with the most energy-rich crop possible*. Initialize the "Limit" to half a million (Limit = 500,000). 
 
 5. In preparation for implementing the "famine" condition (death rate increases to 99% if *Humans* exceeds *Limit* -- otherwise remains at 1%), create new **Links** from *Humans* to *Death rate* and from *Limit* to *Death rate*. Your canvas should look something like the image below:  
 
@@ -102,7 +102,7 @@ You don't actually need to type this all in, you can just click on "Programming 
 
 What happens if the limit were allowed to increase arithmetically? Try to implement this in InsightMaker. That is, can you change the model so that the population limit increases linearly- say, by 1000 per year? What happens then? HINT: you can add a [Flow] to represent increase in agricultural production!
 
-**Q** Is this population ('famine condition' model) regulated? Is it sustainable? Why or why not?  [PointSolutions]   
+**Q** Is this population ('famine condition' model) regulated? Is it sustainable? Why or why not?  [Top Hat]   
 
 Just for fun, here is a [Video](https://www.youtube.com/watch?v=QAkW_i0bDpQ) made by [John Green](https://en.wikipedia.org/wiki/John_Green_(author)) about Malthus and world history!      
 
