--- a/LECTURE2.Rmd
+++ b/LECTURE2.Rmd
@@ -60,7 +60,7 @@ Population size, or abundance, is often represented as $N$, and is the most basi
 
 ## Exponential growth: the fundamental principle of population ecology
 
-![](puffball1.png){width=50%}
+![](puffball2.jpg){width=50%}
 
 Giant puffballs produce 7 trillion offspring (12 zeroes!) in one reproductive event
 ... If all of those individuals reached adulthood, the descendants from just two parent puffballs would weigh more than the entire planet in two generations!
