--- a/LECTURE4.Rmd
+++ b/LECTURE4.Rmd
@@ -166,9 +166,9 @@ For the purpose of answering the questions below, [here is a functioning model y
 7. Run this model. Does the model behave as you would expect?   
 
 **Q:** What is carrying capacity in this model?
-**Q:** What happens if population size starts out *at* carrying capacity?  [PointSolutions]  
-**Q:** What happens if population size starts out *above* carrying capacity? [PointSolutions]    
-**Q:** Is carrying capacity (K) a stable equilibrium in this model? [PointSolutions]    
+**Q:** What happens if population size starts out *at* carrying capacity?  [Top Hat]  
+**Q:** What happens if population size starts out *above* carrying capacity? [Top Hat]    
+**Q:** Is carrying capacity (K) a stable equilibrium in this model? [Top Hat]    
 
 **Q:** In real-world systems, is carrying capacity stable? Is it an equilibrium point? 
 
